# IKWidgetManager

./: .gitignore  CMakeLists.txt  FencesWidget.md  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
src/: CMakeLists.txt  main.cpp  main_old.cpp
src/core/: IWidget.h  PluginLoader.cpp  PluginLoader.h  WidgetExport.h  WidgetManager.cpp  WidgetManager.h
src/widgets/: DarkFrameWidget.h  DropTarget.cpp  DropTarget.h  FencesWidget.cpp  FencesWidget.cpp.bak  FencesWidget.h  FileManager.cpp  FileManager.h  ShellIntegration.cpp  ShellIntegration.h  StickyNotesWidget.cpp  StickyNotesWidget.h
